--- a/Experimentals-with-CAN-and-LIN/.cproject
+++ b/Experimentals-with-CAN-and-LIN/.cproject
@@ -40,6 +40,8 @@
 									<listOptionValue builtIn="false" value="DEBUG"/>
 									<listOptionValue builtIn="false" value="STM32F429xx"/>
 									<listOptionValue builtIn="false" value="USE_CUSTOM_DRIVER"/>
+									<listOptionValue builtIn="false" value="HEARTBEAT"/>
+									<listOptionValue builtIn="false" value="CAN"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.includepaths.1097194747" name="Include paths (-I)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.includepaths" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="../Core/Inc"/>
